--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,23 @@
-<!-- restaurant list -->
-<div class="container mt-5">
-  <!-- search bar -->
-  <div class="container search-bar">
-    <div class="search-bar-outer">
-      <div class="search-bar-inner">
-        <form action="/search">
-          <h4 class="mb-2">尋找餐廳：</h4>
-          <div class="input-group">
-            <input
-              type="text"
-              name="keyword"
-              class="form-control"
-              placeholder="輸入餐廳、分類"
-              aria-label="Restaurant Name..."
-              value=""
-              aria-describedby="search-button"
-            />
-            <div class="input-group-append">
-              <button class="btn btn-major" type="submit" id="search-button"><i
-                  class="fas fa-search"
-                ></i></button>
-            </div>
+<!-- search bar -->
+<div class="container search-bar">
+  <div class="search-bar-outer">
+    <div class="search-bar-inner">
+      <form action="/search">
+        <h4 class="mb-2">尋找餐廳：</h4>
+        <div class="input-group">
+          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+            value="{{keyword}}" aria-describedby="search-button">
+          <div class="input-group-append">
+            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
   </div>
-
-  <div class="row" id="data-panel">
+</div>
+<!-- restaurant list -->
+<div class="container mt-5">
+    <div class="row" id="data-panel">
     <div class="col-md-10 col-12 mx-auto">
       <div class="row row-cols-sm-3">
         {{#each restaurant}}
@@ -46,7 +36,7 @@
                   {{this.category}}
                 </div>
 
-                <span class="badge badge-pill badge-danger font-weight-normal">
+                <span class="badge badge-pill badge-danger font-weight-normal" style="color: black;">
                   {{this.rating}}
                   <i class="fas fa-star fa-xs"></i>
                 </span>
