--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,9 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Restaurant List</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.css" />
-    <link rel="stylesheet" href="/stylesheets/index.css" />
-    <link rel="stylesheet" href="/stylesheets/show.css" />
-  </head>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"/>
 
   <body>
     <header>
